--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,31 +5,53 @@
          version="5.0">
 
   <servlet>
-    <servlet-name>OAuthCallbackServlet</servlet-name>
-    <servlet-class>com.example.controller.OAuthCallbackServlet</servlet-class>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.example.controller.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>OAuthCallbackServlet</servlet-name>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>CallbackServlet</servlet-name>
+    <servlet-class>com.example.controller.CallbackServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CallbackServlet</servlet-name>
     <url-pattern>/oauth2callback</url-pattern>
   </servlet-mapping>
 
   <servlet>
-    <servlet-name>GmailServlet</servlet-name>
-    <servlet-class>com.example.controller.GmailServlet</servlet-class>
+    <servlet-name>SendMailServlet</servlet-name>
+    <servlet-class>com.example.controller.SendMailServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>GmailServlet</servlet-name>
+    <servlet-name>SendMailServlet</servlet-name>
     <url-pattern>/send</url-pattern>
   </servlet-mapping>
 
   <servlet>
-    <servlet-name>FetchEmailServlet</servlet-name>
-    <servlet-class>com.example.controller.FetchEmailServlet</servlet-class>
+    <servlet-name>InboxServlet</servlet-name>
+    <servlet-class>com.example.controller.InboxServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>FetchEmailServlet</servlet-name>
+    <servlet-name>InboxServlet</servlet-name>
     <url-pattern>/inbox</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>com.example.controller.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
 
 
 </web-app>
