--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,7 @@
-<web-app xmlns="http://jakarta.ee/xml/ns/jakartaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://jakarta.ee/xml/ns/jakartaee
-         http://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-         version="5.0">
-
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.example.controller.LoginServlet</servlet-class>
@@ -52,6 +50,4 @@
   <session-config>
     <session-timeout>30</session-timeout>
   </session-config>
-
-
 </web-app>
