--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,9 @@
     <url-pattern>/logout</url-pattern>
   </servlet-mapping>
 
+
   <session-config>
-    <session-timeout>30</session-timeout>
+    <session-timeout>30</session-timeout> <!-- 30 minutes -->
   </session-config>
+
 </web-app>
